// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component with all required props 1`] = `
.emotion-0 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

<label
  class="emotion-0"
  data-test-id="cf-ui-form-label"
  for="someInput"
>
  Label Text
</label>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

<label
  class="my-extra-class emotion-0"
  data-test-id="cf-ui-form-label"
  for="someInput"
>
  Label Text
</label>
`;

exports[`renders the component with an required flag 1`] = `
.emotion-1 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

.emotion-0 {
  color: #6B7888;
  font-weight: 400;
  margin-left: calc(1rem * (4 / 16));
}

<label
  class="emotion-1"
  data-test-id="cf-ui-form-label"
  for="someInput"
>
  Label Text
  <span
    class="emotion-0"
  >
    (
    required
    )
  </span>
</label>
`;

exports[`renders the component with required text 1`] = `
.emotion-1 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

.emotion-0 {
  color: #6B7888;
  font-weight: 400;
  margin-left: calc(1rem * (4 / 16));
}

<label
  class="emotion-1"
  data-test-id="cf-ui-form-label"
  for="someInput"
>
  Label Text
  <span
    class="emotion-0"
  >
    (
    pflichtfeld
    )
  </span>
</label>
`;
